--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+          <h1>About Us</h1>
+            Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Amy</p>
+          <p>Amy Smith</p>
+          <p class="card-text">Amy is an a consulting expert and good at her job</p>
+          <p>amy.smith@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Jake</p>
+          <p>Jake Doe</p>
+          <p class="card-text">Jake is one of our best drivers</p>
+          <p>jake.doe@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Lidia</p>
+          <p>Lidia Grant</p>
+          <p class="card-text">Lidia is our customer service representative. Call her with any questions you have.</p>
+          <p>lidia.grant@example.com</p>
         </div>
       </div>
     </div>
